[package]
name = "libbps"
version = "0.1.0"
edition = "2021"

[dependencies]
crc32fast = "1.3.2"
hex = "0.4.3"
thiserror = "1.0"

[dependencies.clap]
verson = "4.4.8"
default-features = false
features = [
    "cargo",
    "error-context",
    "help",
    "std",
    "usage",
]

[lib]
name = "libbps"
path = "src/lib.rs"

[[bin]]
name = "rbps"
path = "src/main.rs"
